<resources>
    <string name="app_name">TravellBuddy</string>
    <string name="welcome_to">ДОБРЕ ДОШЛИ В</string>
    <string name="welcome_title">TravellBuddy</string>
    <string name="welcome_subtitle">Намерете своя партньор за приключения и изследвайте света заедно.</string>
    <string name="btn_sign_up_welcome">Регистрация</string>
    <string name="btn_log_in_welcome">Вход</string>
    <string name="splash_tagline">Тази платформа е създадена да ви помогне да откриете вълнуващи пътувания и да се свържете с други приключенци лесно!</string>
    <string name="splash_heading">Открийте следващото\nси приключение</string>
    <string name="onboarding_title_1">Открийте приключения</string>
    <string name="onboarding_desc_1">Разгледайте вълнуващи приключения — походи, къмпинг, пътувания с кола, фестивали — и намерете следващото си преживяване.</string>
    <string name="onboarding_title_2">Предложете приключение</string>
    <string name="onboarding_desc_2">Имате план? Създайте приключение, задайте детайлите и поканете други да се присъединят.</string>
    <string name="onboarding_title_3">Изследвайте заедно безопасно</string>
    <string name="onboarding_desc_3">Чатете с вашите приятели за приключения, оценете преживяването си и споделете плановете си за безопасност.</string>
    <string name="btn_next">Напред</string>
    <string name="btn_get_started">Започнете</string>
    <string name="btn_skip">Пропусни</string>
    <string name="sign_in_title">Добре дошли отново</string>
    <string name="sign_in_subtitle">Влезте, за да намерите вашия партньор за приключения</string>
    <string name="sign_up_title">Създайте профил</string>
    <string name="sign_up_subtitle">Присъединете се към общността и намерете следващия си партньор за приключения.</string>
    <string name="hint_email">Имейл</string>
    <string name="hint_password">Парола</string>
    <string name="hint_confirm_password">Потвърдете паролата</string>
    <string name="hint_display_name">Име за показване</string>
    <string name="label_full_name">Пълно име</string>
    <string name="label_email_address">Имейл адрес</string>
    <string name="label_password">Парола</string>
    <string name="hint_full_name_placeholder">Иван Петров</string>
    <string name="hint_email_placeholder">zdravei@primer.com</string>
    <string name="hint_password_placeholder">••••••••</string>
    <string name="already_have_account">Вече имате профил?</string>
    <string name="log_in_link">Вход</string>
    <string name="dont_have_account">Нямате профил?</string>
    <string name="sign_up_link">Регистрация</string>
    <string name="forgot_link">Забравена?</string>
    <string name="btn_log_in">Вход</string>
    <string name="btn_sign_in">Вход</string>
    <string name="btn_sign_up">Регистрация</string>
    <string name="btn_google_sign_in">Вход с Google</string>
    <string name="btn_forgot_password">Забравена парола?</string>
    <string name="link_sign_up">Нямате профил? Регистрирайте се</string>
    <string name="link_sign_in">Вече имате профил? Влезте</string>
    <string name="label_or_divider">ИЛИ</string>
    <string name="error_google_sign_in">Входът с Google се провали. Моля, опитайте отново.</string>
    <string name="google_web_client_id">422784011997-tuvetkhruci7gekc2efdjf293be7vufm.apps.googleusercontent.com</string>
    <string name="error_empty_email">Моля, въведете имейл</string>
    <string name="error_invalid_email">Моля, въведете валиден имейл</string>
    <string name="error_empty_password">Моля, въведете парола</string>
    <string name="error_short_password">Паролата трябва да е поне 6 символа</string>
    <string name="error_passwords_mismatch">Паролите не съвпадат</string>
    <string name="error_empty_name">Моля, въведете вашето име</string>
    <string name="error_auth_failed">Удостоверяването се провали. Моля, опитайте отново.</string>
    <string name="error_sign_up_failed">Регистрацията се провали. Моля, опитайте отново.</string>
    <string name="success_account_created">Профилът е създаден! Моля, потвърдете имейла си.</string>
    <string name="msg_verification_sent">Имейл за потвърждение е изпратен. Моля, проверете входящата си поща.</string>
    <string name="msg_password_reset_sent">Имейл за възстановяване на парола е изпратен.</string>
    <string name="error_email_not_verified">Моля, потвърдете имейла си преди да продължите.</string>
    <string name="title_home">Начало</string>
    <string name="title_my_trips">Моите приключения</string>
    <string name="title_messages">Съобщения</string>
    <string name="title_profile">Профил</string>
    <string name="title_create">Създай</string>
    <string name="hint_search_destination">Търсене на дестинации…</string>
    <string name="hint_search_messages">Търсене в съобщенията…</string>
    <string name="label_more_options">Още опции</string>
    <string name="label_home_title">Открийте приключения</string>
    <string name="label_upcoming_trips">Предстоящи приключения</string>
    <string name="label_no_trips">Няма налични приключения</string>
    <string name="label_no_trips_desc">Бъдете първият, който предложи приключение!</string>
    <string name="label_seats_available">%1$d свободни места</string>
    <string name="label_per_seat">/място</string>
    <string name="label_trip_full">Пълно</string>
    <string name="btn_join_adventure">Присъедини се</string>
    <string name="btn_join">Присъедини се</string>
    <string name="label_travelers">%1$d / %2$d пътешественици</string>
    <string name="cd_adventure_image">Снимка на приключението</string>
    <string name="label_trip_cancelled">Отменено</string>
    <string name="label_spot_left">Остава 1 място</string>
    <string name="label_spots_left">Остават %1$d места</string>
    <string name="label_more_count">+%1$d</string>
    <string name="title_create_trip">Създай приключение</string>
    <string name="hint_origin">Място на среща / Начална точка</string>
    <string name="hint_destination">Дестинация или район</string>
    <string name="hint_date">Дата</string>
    <string name="hint_time">Час</string>
    <string name="hint_seats">Свободни места (1–20)</string>
    <string name="hint_price">Цена на място (0 = безплатно)</string>
    <string name="hint_vehicle">Кратко описание на приключението</string>
    <string name="label_preferences">Детайли</string>
    <string name="label_smoking_allowed">Подходящо за начинаещи</string>
    <string name="label_pets_allowed">Домашни любимци са добре дошли</string>
    <string name="label_luggage_size">Ниво на трудност</string>
    <string name="btn_publish_trip">Публикувай приключение</string>
    <string name="btn_post_adventure">Публикувай приключение</string>
    <string name="error_empty_origin">Моля, въведете място на среща</string>
    <string name="error_empty_cover_photo">Моля, добавете снимка</string>
    <string name="error_empty_title">Моля, въведете заглавие за вашето приключение</string>
    <string name="error_empty_destination">Моля, въведете дестинация или район</string>
    <string name="error_empty_date">Моля, изберете дата</string>
    <string name="error_empty_start_date">Моля, изберете начална дата</string>
    <string name="error_empty_end_date">Моля, изберете крайна дата</string>
    <string name="error_empty_time">Моля, изберете час</string>
    <string name="error_invalid_seats">Моля, въведете места между 1 и 20</string>
    <string name="error_empty_price">Моля, въведете цена (0 за безплатно)</string>
    <string name="error_invalid_price">Моля, въведете валидна цена</string>
    <string name="error_invalid_budget">Моля, въведете валидна сума за бюджет</string>
    <string name="error_past_date">Датата на приключението трябва да е в бъдеще</string>
    <string name="error_empty_vehicle">Моля, опишете приключението</string>
    <string name="success_trip_created">Приключението е публикувано успешно!</string>
    <string name="error_trip_creation_failed">Неуспешно създаване на приключение. Моля, опитайте отново.</string>
    <string name="error_email_not_verified_trip">Моля, потвърдете имейла си преди да създадете приключение.</string>
    <string name="error_not_logged_in">Трябва да сте влезли, за да създадете приключение.</string>
    <string name="label_add_cover_photo">Добавете снимка</string>
    <string name="label_change_photo">Смяна на снимката</string>
    <string name="label_photo_format">PNG, JPG до 5MB</string>
    <string name="label_title">ЗАГЛАВИЕ</string>
    <string name="hint_adventure_title">Дайте привлекателно име на приключението</string>
    <string name="hint_trip_title">Дайте привлекателно име на приключението</string>
    <string name="hint_select_date">Изберете дата</string>
    <string name="label_destination">ДЕСТИНАЦИЯ</string>
    <string name="hint_where_to">Накъде?</string>
    <string name="label_type">ВИД</string>
    <string name="label_dates">ДАТИ</string>
    <string name="label_start_date">НАЧАЛНА ДАТА</string>
    <string name="label_end_date">КРАЙНА ДАТА</string>
    <string name="hint_select_dates">Изберете дати</string>
    <string name="label_group_size">РАЗМЕР НА ГРУПАТА</string>
    <string name="hint_group_size">2 - 20</string>
    <string name="label_budget">БЮДЖЕТ</string>
    <string name="label_estimated_budget">ПРИБЛИЗИТЕЛЕН БЮДЖЕТ НА ЧОВЕК</string>
    <string name="hint_budget_amount">напр. 500</string>
    <string name="currency_symbol_eur">€</string>
    <string name="currency_eur">EUR</string>
    <string name="budget_low">$</string>
    <string name="budget_medium">$$</string>
    <string name="budget_high">$$$</string>
    <string name="label_description">ОПИСАНИЕ</string>
    <string name="hint_description">Какъв е планът? Кого търсите…</string>
    <string name="btn_back">Назад</string>
    <string name="btn_favorite">Добави в любими</string>
    <string name="cd_trip_image">Снимка на приключението</string>
    <string name="label_about_adventure">За това приключение</string>
    <string name="label_hosted_by">Организатор</string>
    <string name="label_participants">Участници</string>
    <string name="label_trips_hosted">%1$d организирани пътувания</string>
    <string name="btn_join_activity">Присъедини се</string>
    <string name="title_trip_details">Детайли за приключението</string>
    <string name="title_manage_requests">Управление на заявките</string>
    <string name="title_chat">Чат за приключението</string>
    <string name="label_edit_profile">Редактиране на профила</string>
    <string name="title_ratings">Оценки и отзиви</string>
    <string name="title_rate_user">Оценете потребител</string>
    <string name="hint_rating_comment">Оставете коментар (незадължително)</string>
    <string name="btn_submit_rating">Изпрати оценка</string>
    <string name="title_settings">Настройки</string>
    <string name="title_filter">Филтриране на приключения</string>
    <string name="btn_apply_filter">Приложи</string>
    <string name="btn_clear_filter">Изчисти</string>
    <string name="hint_min_price">Мин. цена</string>
    <string name="hint_max_price">Макс. цена</string>
    <string name="dialog_delete_adventure_title">Изтриване на приключение</string>
    <string name="dialog_delete_adventure_message">Сигурни ли сте, че искате да изтриете това приключение? Това действие е необратимо.</string>
    <string name="dialog_delete_confirm">Да, изтрий</string>
    <string name="dialog_logout_message">Сигурни ли сте, че искате да излезете от профила си?</string>
    <string name="dialog_logout_confirm">Да, излез</string>
    <string name="dialog_logout_title">Изход</string>
    <string name="dialog_cancel">Отказ</string>
    <string name="admin_announcement_title">Заглавие</string>
    <string name="admin_announcement_message">Съобщение</string>
    <string name="admin_announcement_type">Тип на съобщението</string>
    <string name="admin_announcement_expiry">Дата на изтичане (незадължително)</string>
    <string name="admin_select_date">Изберете дата</string>
</resources>